ToDoList and DataBinding

--- a/BlazorApp/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/BlazorApp/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using BlazorApp.Shared.DataBinding
 
 <PageTitle>Index</PageTitle>
 
@@ -7,3 +8,9 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<h2>Testes:</h2>
+
+<ToDoList></ToDoList>
+
+<DataBinding />
