--- a/BlazorApp/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/BlazorApp/Pages/Index.razor
@@ -14,3 +14,5 @@ Welcome to your new app.
 <ToDoList></ToDoList>
 
 <DataBinding />
+
+<NavLink class="nav-link" href="pokemon-list">Lista de Pokémons</NavLink>
